--- a/src/app/ui/templates/base.html
+++ b/src/app/ui/templates/base.html
@@ -10,7 +10,10 @@
 <body>
     <div class="app-container">
         <!-- 侧边栏 -->
-        <div class="sidebar">
+        <div class="sidebar" id="sidebar">
+            <div class="sidebar-toggle" id="sidebar-toggle">
+                <i class="fas fa-chevron-left"></i>
+            </div>
             <div class="logo">
                 <img src="/static/img/logo.svg" alt="GestroKey Logo">
                 <h1>GestroKey</h1>
