--- a/src/app/ui/templates/base.html
+++ b/src/app/ui/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GestroKey 隐绘助手</title>
     <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/code-editor.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -49,8 +50,10 @@
         </div>
     </div>
     
-    <script src="/static/js/utils.js"></script>
-    <script src="/static/js/main.js"></script>
+    <script src="{{ url_for('static', filename='js/utils.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/form-controls.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/code-editor.js') }}"></script>
     
     <!-- 页面特定脚本 -->
     {% block scripts %}{% endblock %}
